--- a/index.html
+++ b/index.html
@@ -16,51 +16,50 @@
   <body>
     <button class="btn btn-index">MOTIVATE ME</button>
 
-    <div class="modalAge modalCss hidden">
+    <div class="modal-age modal-css hidden">
       <h1>Aight, but first...</h1>
       <p>Please tell me your birth date.</p>
       <form>
-        <div class="inputField">
-          <input
-            class="inputYear insertAge"
-            type="text"
-            placeholder="Year"
-            maxlength="4"
-          />
-          <input
-            class="inputMonth insertAge"
-            type="text"
-            placeholder="Month"
-            maxlength="2"
-          />
-          <input
-            class="inputDay insertAge"
-            type="text"
-            placeholder="Day"
-            maxlength="2"
-          />
-        </div>
+        <input
+          class="input-year insert-age"
+          type="text"
+          placeholder="Year"
+          maxlength="4"
+        />
+        <input
+          class="input-month insert-age"
+          type="text"
+          placeholder="Month"
+          maxlength="2"
+        />
+        <input
+          class="input-day insert-age"
+          type="text"
+          placeholder="Day"
+          maxlength="2"
+        />
+
         <button type="button" class="btn btn-app">NEXT</button>
       </form>
     </div>
 
-    <div class="modalPlans modalCss hidden">
+    <div class="modal-plans modal-css hidden">
       <h1>Before the motivation begins..</h1>
       <p>
-        Tell me some of your goals. How do you imagine your life at it's best?
+        Tell me some of your goals. How do you imagine your future life?
         Continue the sentence.
       </p>
       <p>(60 chars only)</p>
       <form>
         <p>In the future, I'd like to..:</p>
-        <input class="insertAge inputPlans" type="text" maxlength="60" />
+        <input class="insert-age input-plans" type="text" maxlength="60" />
         <button type="button" class="btn btn-result">WHAT'S GOING ON</button>
       </form>
     </div>
-    <div class="modalResult modalCss hidden">
-      <h2 class="planText">BIG PLANS..</h2>
-      <p id="yearText">#</p>
-      <p id="questionText" class="hidden">
+    <div class="modal-result modal-css hidden">
+      <h2 class="plan-text">BIG PLANS..</h2>
+      <p id="year-text">#</p>
+      <p id="question-text" class="hidden">
         WELL, I'M GONNA SHOW YOU SOMETHING.
       </p>
       <button type="button" class="btn btn-show hidden">SHOW ME</button>
